--- a/Develop/index.html
+++ b/Develop/index.html
@@ -2,13 +2,60 @@
 <html lang="en">
 
 <head>
-<!-- TODO: add head content below -->
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jason Busenitz's Portfolio</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-<!-- TODO: add body content below -->
+    <header class="topnav">
+        <h1 class="title">
+            Jason Busenitz's Portfolio
+        </h1>
+        <nav class="navitems">
+            <a href="#">About Me</a>
+            <a href="#">My Work</a>
+            <a href="#">Contact Info</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>
+                About Me
+            </h2>
+            <div>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum ab recusandae alias quos dolorem
+                repellendus veniam necessitatibus quam facilis odit distinctio tenetur ea iste, reiciendis error at
+                adipisci veritatis eaque quas inventore eligendi iure velit incidunt omnis. Nam tempora provident nulla,
+                adipisci maiores sunt commodi porro et optio ex eligendi quos necessitatibus blanditiis quo illo non
+                facilis ab qui eveniet praesentium, molestiae quasi, molestias explicabo at. Inventore amet illo,
+                veritatis rem fuga exercitationem atque quibusdam beatae voluptas maiores sunt mollitia cupiditate
+                aperiam, eaque consequatur repellat ea consectetur, magnam tenetur ducimus officiis laudantium nisi
+                rerum ipsam! Reprehenderit repellendus soluta harum numquam.
+            </div>
+        </section>
+        <section>
+            <h2>
+                My Work
+            </h2>
+            <div>
+                <a href="https://jasonbusenitz.github.io/prework-study-guide/"></a>
+            </div>
+        </section>
+    </main>
 
+    <footer>
+        <h2>
+            Contact Info
+        </h2>
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus unde omnis quos repellat possimus qui
+            corrupti. Perferendis numquam, fugiat officia reiciendis laborum eum commodi dolorum consequuntur, eos
+            praesentium in iusto.
+        </div>
+    </footer>
 </body>
 
 </html>
