--- a/Develop/index.html
+++ b/Develop/index.html
@@ -10,51 +10,74 @@
 </head>
 
 <body>
+    <!-- nav bar -->
     <header class="topnav">
         <h1 class="title">
             Jason Busenitz's Portfolio
         </h1>
         <nav class="navitems">
-            <a href="#">About Me</a>
-            <a href="#">My Work</a>
-            <a href="#">Contact Info</a>
+            <a href="#aboutme">About Me</a>
+            <a href="#work">My Work</a>
+            <a href="#contact">Contact Info</a>
         </nav>
     </header>
     <main>
-        <section>
-            <h2>
+        <!-- about me -->
+        <section class="row" id="aboutme">
+            <h2 class="sectiontitle">
                 About Me
             </h2>
-            <div>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum ab recusandae alias quos dolorem
-                repellendus veniam necessitatibus quam facilis odit distinctio tenetur ea iste, reiciendis error at
-                adipisci veritatis eaque quas inventore eligendi iure velit incidunt omnis. Nam tempora provident nulla,
-                adipisci maiores sunt commodi porro et optio ex eligendi quos necessitatibus blanditiis quo illo non
-                facilis ab qui eveniet praesentium, molestiae quasi, molestias explicabo at. Inventore amet illo,
-                veritatis rem fuga exercitationem atque quibusdam beatae voluptas maiores sunt mollitia cupiditate
-                aperiam, eaque consequatur repellat ea consectetur, magnam tenetur ducimus officiis laudantium nisi
-                rerum ipsam! Reprehenderit repellendus soluta harum numquam.
+            <div class="content">
+                Hello, and welcome! My name is Jason Busenitz. I am currently taking the KU coding boot camp course.
+                Besides coding, I am an avid gamer as well as a fitness enthusiast. I played two years of collegiate
+                baseball before enrolling in the boot camp and plan on continuing my baseball career after finishing the
+                course. One fun fact about me is that I majored in psychology while attending university. All that I
+                learned during those two years has made me an excellent de-escalator and facilitator for healthy
+                discussions about uncomfortable topics.
+
             </div>
         </section>
-        <section>
-            <h2>
+        <!-- my work -->
+        <section class="row">
+            <h2 class="sectiontitle" id="work">
                 My Work
             </h2>
-            <div>
-                <a href="https://jasonbusenitz.github.io/prework-study-guide/"></a>
+            <div class="img">
+                <a href="https://jasonbusenitz.github.io/prework-study-guide/">
+                    <img class="firstimg" src="./assets/img/Screenshot (3).png" alt="Jason's Prework Study Guide">
+                </a>
+                <div class="lastfour">
+                    <a>
+                        <img class="placeholders" src="./assets/img/Screenshot (4).jpg"
+                            alt="Place holder image for unfinished project">
+                    </a>
+                    <a>
+                        <img class="placeholders" src="./assets/img/Screenshot (4).jpg"
+                            alt="Place holder image for unfinished project">
+                    </a>
+                    <a>
+                        <img class="placeholders" src="./assets/img/Screenshot (4).jpg"
+                            alt="Place holder image for unfinished project">
+                    </a>
+                    <a>
+                        <img class="placeholders" src="./assets/img/Screenshot (4).jpg"
+                            alt="Place holder image for unfinished project">
+                    </a>
+                </div>
             </div>
         </section>
     </main>
-
-    <footer>
-        <h2>
+    <!-- contact info -->
+    <footer class="contactbox" id="contact">
+        <h2 class="sectiontitle">
             Contact Info
         </h2>
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus unde omnis quos repellat possimus qui
-            corrupti. Perferendis numquam, fugiat officia reiciendis laborum eum commodi dolorum consequuntur, eos
-            praesentium in iusto.
-        </div>
+        <p>
+            (785) 554-0945
+        </p>
+        <p>
+            jbus731@gmail.com
+        </p>
     </footer>
 </body>
 
